# query-validator-go

./: Cargo.toml  Makefile  Readme.md  cforgo.yaml  go.mod
.github/actions/init-git-user/: action.yml
.github/workflows/: ci.yml  release.yml
generated_bindings/: cgo_helpers.go  cgo_helpers.h  const.go  doc.go  generated_bindings.go  types.go
packaged/include/: libmamoru_query_validator_go.h
packaged/lib/: .gitignore
query_validator/: query_validator.go
src/: lib.rs
tests/: query_validator_test.go
