[package]
name = "mamoru-query-validator-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# optimize for binary size
opt-level = "z"
strip = true
lto = true

[dependencies]
query-validator-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "009e8da968e027676ea684c8f726a97dce589d95"}
