[package]
name = "mamoru-query-validator-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# optimize for binary size
opt-level = "z"
strip = true
lto = true

[dependencies]
query-validator-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "3ccf8378d2c171bb3dfb452c364ee47cca1d8cfd"}
