[package]
name = "mamoru-query-validator-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# optimize for binary size
opt-level = "z"
strip = true
lto = true

[dependencies]
query-validator-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "6135da260d462ce0212fde50ab1da50a2b0f189d"}
